charts/netalertx/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: netalertx
  name: netalertx
  namespace: netalertx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netalertx
  serviceName: netalertx
  template:
    metadata:
      labels:
        app: netalertx
        name: netalertx
        release: netalertx
    spec:
      containers:
      - image: ghcr.io/jokob-sk/netalertx:latest
        imagePullPolicy: IfNotPresent
        name: netalertx
        ports:
        - containerPort: 20211
          name: http
          protocol: TCP
          #        securityContext:
          #          runAsUser: 1000
          #          runAsGroup: 1000
        volumeMounts:
        - name: data
          mountPath: /app/config
          subPath: config
        - name: data
          mountPath: /app/db
          subPath: db
        - name: api
          mountPath: /app/api
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: netalertx-data
        - name: api
          emptyDir: {}
  updateStrategy:
    type: RollingUpdate
