charts/netalertx/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: netalertx
  name: netalertx
  namespace: netalertx
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 20211
    protocol: TCP
    targetPort: http
  selector:
    app: netalertx
