charts/netalertx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netalertx
  namespace: netalertx
spec:
  ingressClassName: nginx
  rules:
  - host: netalertx.collins.home
    http:
      paths:
      - backend:
          service:
            name: netalertx
            port:
              name: http
        path: /
        pathType: Prefix
